--- a/h.css
+++ b/h.css
@@ -16,6 +16,54 @@
 }
 
 
+.circle1 {
+  position: absolute;
+  left: 100px;
+  top: 490px;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+
+.circle2 {
+  align-self: center;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  background-color: gray;
+}
+
+.circle2:hover {
+  background-color: white;
+}
+
+
+.square1 {
+  position: absolute;
+  left: 100px;
+  top: 630px;
+  width: 50px;
+  height: 50px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+
+.square2 {
+  align-self: center;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  background-color: gray;
+}
+
+.square2:hover {
+  background-color: white;
+}
 /* The switch - the box around the slider */
 .switch {
     position: relative;
@@ -174,4 +222,3 @@
   .slider1.round1:before {
     border-radius: 50%;
 };
-
